--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+  <% if flash[:notice].present? %>
+    <div><%= flash[:notice] %></div>
+  <% end %>
+
 <%= yield %>
 
 </body>
