--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :state, collection: ['AL', 'AK', 'AZ', 'AR', 'CA', 'CO', 'CT', 'DE', 'DC', 'FL', 'GA', 'HI', 'ID', 'IL', 'IN', 'IA', 'KS', 'KY', 'LA', 'KS', 'KY', 'LA', 'ME', 'MD', 'MA','MI', 'MN', 'MS', 'MO', 'MT', 'NE', 'NV', 'NH', 'NJ', 'NM', 'NY', 'NC', 'ND', 'OH', 'OK', 'OR', 'PA', 'RI', 'SC', 'SD', 'TN', 'TX', 'UT', 'VT', 'VA', 'WA', 'WV', 'WI', 'WY'] %>
   <%= f.input :zip_code, label: 'Zip Code' %>
   <%= f.input :description %>
+  <%= f.input :owner_id, label: 'Owner', collection: @owners %>
 
   <%= f.button :submit, 'Record Building' %>
 <% end %>
